+ Agregué página de terminos y condiciones (FALTA PONER BIEN EL TEXTO) + Puse los colores en el res "colors" así seleccionamos los colores desde ahí

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.patitasApp"
         tools:targetApi="31">
         <activity
+            android:name=".TerminosYCondiciones"
+            android:exported="false" />
+        <activity
             android:name=".Codigo"
             android:exported="true">
             <intent-filter>
