--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Base.Theme.patitasApp"
         tools:targetApi="31">
         <activity
+            android:name=".usuario.VerListaUsuarios"
+            android:exported="false" />
+        <activity
             android:name=".refugio.FichaRefugio"
             android:exported="false" />
         <activity
@@ -31,13 +34,13 @@
             android:exported="true" />
         <activity
             android:name=".gato.Ficha"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
-            android:name=".gato.VerLista"
-            android:exported="true"/>
+            android:name=".gato.VerListaGatos"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".IngresoApp"
             android:exported="true">
