+ Se agrega funcionamiento logico del login: ahora verifica en la base de datos si el usuario ya existe o no, y si esta bien la contraseña + Se agrega funcionamiento logico del regsitro: ahora verifica en la base de datos si este email ya existe

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:name=".gato.VerListaGatos"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Login"
             android:exported="true" />
         <activity
             android:name=".IngresoApp"
