--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Base.Theme.patitasApp"
         tools:targetApi="31">
         <activity
+            android:name=".PRUEBA"
+            android:exported="false" />
+        <activity
             android:name=".usuario.VerListaUsuarios"
             android:exported="false" />
         <activity
